最近发布了项目的总结报告，加急更新一下

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="id">ID:</string>
     <string name="logout">logout</string>
     <string name="info">This is a cool app that lets you chat with friends.This is a cool app that lets you chat with friends.This is a cool app that lets you chat with friends.</string>
+    <string name="send_code">Send Code</string>
 </resources>
